프로젝트_정리/03배포/kubernetes_deploy_files/front/front-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: planit-frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: planit-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planit-frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: planit-frontend
  template:
    metadata:
      labels:
        app: planit-frontend
    spec:
      containers:
        - name: planit-frontend
          image: shoon2430/planit-front:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
