프로젝트_정리/03배포/kubernetes_deploy_files/front/front-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "front-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: planit-frontend
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "planit-frontend"
              servicePort: 80
